	* patches/icedtea-format-warnings.patch,
	* patches/icedtea-fortify-source.patch,
	* patches/icedtea-lib64.patch,
	* patches/icedtea-no-bcopy.patch:
	Removed, applied upstream.
	* HACKING: Updated.
	* Makefile.am: Bump to b48.
	* patches/hotspot/original/icedtea-includedb.patch,
	* patches/icedtea-libraries.patch: Recreated.

2009-02-27  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkBlock.cpp
	(SharkBlock::maybe_inline_call): Inline empty methods.

2009-02-26  Deepak Bhole <dbhole@redhat.com>

	* IcedTeaPlugin.cc: Decode url via nsINetUtil::UnescapeString()
	* plugin/icedtea/sun/applet/PluginAppletViewer.java: Encode URL before
	sending it to mozilla. Increment timeout for initialization message. Fix
	parser to handle "java:" in code attribute.
	* plugin/icedtea/sun/applet/PluginMain.java: Tee outputstream only if not
	in debug mode.

2009-02-26  Omair Majid  <omajid@redhat.com>

	* patches/icedtea-xml-encodinginfo.patch: New file. Fix possible
	StackOverflowError.
	* Makefile.am (ICEDTEA_PATCHES): Apply the above.
	* HACKING: Document the above.

2009-02-26  Andrew Haley  <aph@redhat.com>

	* patches/openjdk/hotspot/src/share/vm/prims/jvmtiEnv.cpp: New file.
	* Makefile.am (ICEDTEA_PATCHES): Add icedtea-jvmtiEnv.patch.
	* ports/hotspot/src/share/vm/shark/sharkFunction.cpp
	(SharkFunction::initialize): Use real name, not "func".
	Pass "none" to "-debug-only=".
	Register generated code for profiling, etc.
	* ports/hotspot/src/share/vm/shark/sharkEntry.hpp (class SharkEntry):
	Remove #ifndef PRODUCT.
	* ports/hotspot/src/share/vm/shark/sharkBuilder.hpp
	(SharkBuilder::CreateFunction): Use real name, not "func".
	* ports/hotspot/src/share/vm/shark/sharkBuilder.cpp
	(SharkBuilder::CreateFunction): Use real name, not "func".
	(MyJITMemoryManager::endFunctionBody): Remove #ifndef PRODUCT.

2009-02-26  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkBlock.cpp
	(SharkBlock::call_register_finalizer): Fix mismatch.
